<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.christiancollado.petagram.FavsActivity">


    <item android:id="@+id/favoritos"
        android:title="@string/ajustes_mascotas"
        android:orderInCategory="100"
        android:icon="@drawable/star"
        app:showAsAction="ifRoom"
        />


    <item android:id="@+id/contacto"
        android:title="@string/texto_contacto"
        android:orderInCategory="101"
        />
    <item android:id="@+id/about"
        android:title="@string/texto_about"
        android:orderInCategory="102"
        />
    <item
        android:id="@+id/configurar"
        android:title="@string/text_config"
        android:orderInCategory="103">
    </item>
    <item
        android:id="@+id/notif"
        android:title="@string/text_notif"
        android:orderInCategory="103">
    </item>
</menu>