<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.christiancollado.petagram.AboutActivity"
    >
    
    <LinearLayout
        android:layout_below="@+id/abActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/info_desarrollador"
            android:textSize="@dimen/tamaño_textos"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvNombreDesarrollador"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nombre_desarrollador"
            android:textSize="@dimen/tamaño_textos"
            android:textStyle="italic"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/tvEmailDesarrollador"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/email_desarrollador"
            android:textSize="@dimen/tamaño_textos"
            android:textStyle="italic"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/tvTwitter"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/twitter_desarrollador"
            android:textSize="@dimen/tamaño_textos"
            android:textStyle="italic"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_gravity="center_horizontal"/>



    </LinearLayout>

</RelativeLayout>
